Fix logo overlap on small screens

--- a/titlepage/title_simple-logo.css
+++ b/titlepage/title_simple-logo.css
@@ -35,7 +35,7 @@
     flex-shrink: 0;
     background-position: 0 50%;
     margin-top: 8vh;
-    margin-bottom: -10em;
+    margin-bottom: -12vh;
 }
 
 .layout-mobile .detailLogo {
